# src/routes/businessRouters.js
@@ -1,0 +1,9 @@
+import { createBusiness, loginBusiness} from "../controllers/businessController.js";
+import { Router } from "express";
+
+let businessRouter = Router();
+businessRouter.post('/business', createBusiness);
+businessRouter.post('/business/login', loginBusiness);
+
+
+export default businessRouter;
